# mcts-self-refine

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: algorithm.md  flow.md  generate.md  how_to_coding.md  prompt_in_experiment.md
docs/note/: mctsr-algorithm-blog-post.md
output/: mcts_tree_visualization.md
src/: mcts-self-refine-ollama-instructor.py  mcts_manim_visualization.py  mctsr.py  note.py  note_client.py
